# magic_kit

./: Cargo.toml  README.md
magic_kit/: Cargo.toml
magic_kit/src/: lib.rs
magic_kit/tests/: basic_test.rs
magic_kit_macros/: Cargo.toml
magic_kit_macros/src/: lib.rs
tests/: basic_test.rs
