[package]
name = "magic_kit_macros"
description = "macros for the magic_kit crate"
repository = "https://github.com/ericseppanen/magic_kit"
license = "MIT"
authors = ["Eric Seppanen <eds@reric.net>"]
version = "0.1.0"
edition = "2021"
rust-version = "1.56"

[lib]
proc-macro = true

[dependencies]
freezebox = "0.2.3"
quote = "1.0.20"
syn = { version = "1.0.98", features = ["extra-traits", "full"] }
proc-macro2 = "1.0.40"
heck = "0.4.0"
